--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
-name: LLVM Toolchain
+name: RastaMod69 Toolchain
 on: 
   workflow_dispatch:
-  schedule:
-    - cron:  '0 1 * * 5'
 
 jobs:
   build:
